--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Project">Project</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="./BHUSHAN CHAUDHARI.pdf" id="downloadBtn" download="./BHUSHAN CHAUDHARI.pdf">Download
+                <li><a href="./BHUSHAN CHAUDHARI-Copy.pdf" id="downloadBtn" download="./BHUSHAN CHAUDHARI-Copy.pdf">Download
                         CV</a>
                 </li>
 
@@ -198,6 +198,7 @@
         loop: true
     });
 </script>
+
 
 
 </html>
